Fixed mozilla backface-visibility bug.

--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -4,6 +4,7 @@
     backface-visibility: hidden;
     grid-column: 1;
     grid-row: 1;
+    transform: rotateX(0deg);
 }
 
 .IDCard {
